# TrainingVisualizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TrainingVisualizer.py  conanfile.txt  example.py  vis.py
include/: all.h
src/: vis.cpp
